--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "react-treeview": "^0.4.7"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
+    "@types/node": "^22.10.6",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
