--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "react-treeview": "^0.4.7"
