--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@types/google.maps": "^3.58.1",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
