--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@types/google.maps": "^3.58.1",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "react-treeview": "^0.4.7"
