--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.10",
     "@types/google.maps": "^3.58.1",
     "axios": "^1.7.9",
+    "dompurify": "^3.2.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
     "react-treeview": "^0.4.7"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^22.10.6",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
