--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@types/google.maps": "^3.58.1",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "react-treeview": "^0.4.7"
